<resources>
    <string name="app_name">KdMeuDinheiro</string>
    <string name="bem_vindo_login">Bem vindo</string>
    <string name="mantenha_me_conectado">Mantenha-me conectado</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="cadastre_se_titulo">Cadastre-se</string>
    <string name="cadastrar_btn">Cadastrar</string>
    <string name="cancelar_cadastro_btn">Cancelar</string>
    <string name="Fix_Bill_Label">Fixa</string>
    <string name="Leisure_Bill_Label">Lazer</string>
    <string name="Monthly_Bill_Label">Mensal</string>
    <string name="Emergency_Bill_Label">Emergencial</string>
    <string name="Tip_bills_fix_text">Conta Fixa: Despesas cujos valores mudam com pouca consistência, por exemplo: Aluguel, faculdade e afins.</string>
    <string name="Tip_bills_Monthly_text"> Conta Mensal: Despesas recorrentes, cujo valor pode variar rapidamente, por exemplo: luz, água, gás, academia. </string>
    <string name="Tip_bills_Leisure_text"> Lazer: Gastos com sigo, por exemplo: Aquela blusinha ou o Netflix e etc. </string>
    <string name="Tip_bills_Emergency_text">Emergencial: Gastos inesperados que podem ocorrer no decorrer do mês, por exemplo: Remédios, reparos e etc..</string>
    <string name="Bill_Name_label_list_card">Nome do gasto: </string>
    <string name="Bill_Price_label_list_card">Valor do gasto: </string>
    <string name="Bill_ExpireDate_label_list_card">Data de vencimento: </string>
    <string name="Bill_Added_with_sucess">Conta adicionada com sucesso </string>
    <string name="add_bill_label">Adicionar conta</string>
    <string name="name_bill_label_inputs">Nome da conta ou gasto</string>
    <string name="label_bill_price_inputs">Valor da conta ou gasto</string>
    <string name="expiredate_bill_label_inputs">Data de vencimento ou pagamento</string>
    <string name="save_label">Salvar</string>
    <string name="ok">Confirmar</string>
    <string name="cancel">Cancelar</string>
    <string name="edit_label">Editar</string>
    <string name="delete_label">Deletar</string>
    <string name="pay_label">Pagar</string>
    <string name="pay_bill">Conta paga</string>
    <string name="logout_label">Logout</string>
    <string name="user_prefs_label">Preferências do usuário</string>
    <string name="user_avatar_desc">User avatar</string>
    <string name="username_label_prefs">UserName</string>
    <string name="useremail_label_prefs">user.email@mailuser.com.ca</string>
    <string name="edit_info_label">Editar informações</string>
    <string name="voltar">Voltar</string>
    <string name="about_label_desc">Botão sobre</string>
    <string name="insert_income_label">Insira sua renda mensal</string>
    <string name="add_label">Adicionar</string>
    <string name="text_tip_chart_monthly">Nas contas mensais, é dito por varias empresas como por exemplo: Nubank, que o ideal é que até 50% junto das suas contas fixas, abaixo voce vai encontar artigos e materias que podem te ajudar. </string>
    <string name="text_tip_chart_fix">Nas contas fixas, é dito por varias empresas como por exemplo: Nubank, que o ideal é que até 50% junto das suas contas mensais, mas sabemos que não é tão simples não é mesmo? então separamos algumas dicas para você! </string>
    <string name="no_bills_msg">Ainda não possui contas? Adicione agora!</string>
    <string name="no_bills_hint">Adicione uma conta aqui -></string>
    <string name="no_graph">Ainda não há informações suficientes para a composição do gráfico, insira sua renda mensal e contas para comecar.</string>
    <string name="error_to_call_bills">Erro ao solicitar contas</string>
    <string name="bill_add_success">Conta adicionada com sucesso</string>
    <string name="bill_add_failure">Erro ao adicionar a conta</string>
    <string name="bill_edit_success">Conta editada com sucesso</string>
    <string name="bill_edit_failure">Falha ao editar a conta</string>
    <string name="bill_delete_success">Conta deletada com sucesso</string>
    <string name="bill_delete_failure">Falha ao deletar a conta</string>
    <string name="bill_paid_success">Conta paga com sucesso</string>
    <string name="validation_registration_failure">Favor preencher todos os campos</string>
    <string name="validation_login_failure">Email ou senha inválidos</string>
    <string name="registration_on_firebase_success">Usuário cadastrado com sucesso</string>
    <string name="registration_on_firebase_failure">Erro ao cadastrar usuário</string>
    <string name="error_to_excute_action">Erro ao executar a acao </string>
    <string name="leisure_text">Lazer, sempre pensamos que tudo está muito caro ou que não podemos nos divertir gastanto pouco né? Para desmistificar isso temos abaixo, alguns artigos que irão te ajudar. </string>
    <string name="emergency_text">Emergenciais, bom o próprio nome já diz, aqui talvez não tenha muito como fugir porem não desistimos facil, abaixo algumas materias para te ajudar.</string>
    <string name="edited_with_success">"Editado com sucesso"</string>
    <string name="redefinition_email_send">"Email de redefinição enviado"</string>
    <string name="redefinition_email_not_found">"Email não encontrado"</string>
    <string name="no_connection_slow_warning">"Detectamos que está sem conexão, algumas funções vão ficar lentas"</string>
    <string name="no_connection_news">"Detectamos que está sem conexão, as notícias não podem ser disponibilizadas "</string>
    <string name="text_insert_incame"> Renda mensal: Composta da soma dos ganhos menos a dedução de impostos, por exemplo: Imposto de renda, INSS, entre outros. </string>
    <string name="notification_button">Notificação</string>
    <string name="reset_password">Esqueci minha senha</string>
    <string name="title_to_reset_password">Informe seu email para redefinição de senha</string>
    <string name="try_again_connection">Sem Conexao, tente novamente mais tarde.</string>
    <string name="insert_income">Insira sua renda mensal para comecar --></string>
    <string name="button_entrar">Entrar</string>
    <string name="string_senha">Senha</string>
    <string name="none_leftovers">Sobras 0</string>
    <string name="leftovers">Sobras:</string>
    <string name="total_expenses">Gastos totais:</string>
    <string name="monthy_income">Renda Mensal:</string>
    <string name="error_search_bill">Não foi possivel achar uma conta com este nome, tente novamente.</string>


</resources>