<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardViewBillTipDialog"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/default_10dp_margin"
        android:backgroundTint="@android:color/transparent"
        app:cardCornerRadius="@dimen/default_card_border_radius"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/backButton"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_margin="5dp"
                android:layout_gravity="top|start"
                android:contentDescription="@string/voltar"
                android:src="@drawable/ic_baseline_arrow_back_24" />

            <TextView
                android:id="@+id/textViewBillDetailsFix"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:justificationMode="inter_word"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/Tip_bills_fix_text"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewBillDetailsMonthly"
                android:layout_width="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/Tip_bills_Monthly_text"
                android:textSize="20sp"
                android:justificationMode="inter_word" />

            <TextView
                android:id="@+id/textViewBillDetailsLeisure"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:justificationMode="inter_word"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/Tip_bills_Leisure_text"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewBillDetailsEmergency"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:justificationMode="inter_word"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/Tip_bills_Emergency_text"
                android:textSize="20sp" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>