<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_default"
    tools:context=".view.BillsFragment">

    <TextView
        android:visibility="invisible"
        android:id="@+id/tvNoBills"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_black"
        android:text="@string/no_bills_msg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:visibility="invisible"
        android:id="@+id/ivArrowDown"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/sad"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@id/tvNoBills"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
         />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/progressAnimation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_url="https://assets1.lottiefiles.com/packages/lf20_SyUX5x.json" />

    <ImageView
        android:id="@+id/About"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:contentDescription="@string/about_label_desc"
        android:src="@drawable/ic_baseline_help_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewIdNoXML"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/About" />

    <TextView
        android:visibility="invisible"
        android:id="@+id/tvAddBillHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/no_bills_hint"
        android:fontFamily="@font/roboto_black"
        app:layout_constraintTop_toTopOf="@id/floatButtonAddBill"
        app:layout_constraintBottom_toBottomOf="@id/floatButtonAddBill"
        app:layout_constraintRight_toLeftOf="@id/floatButtonAddBill"
        />
    <ImageView
        android:id="@+id/floatButtonAddBill"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_margin="16dp"
        android:contentDescription="@string/add_bill_label"
        android:src="@drawable/ic_baseline_add_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>