<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_10dp_margin"
        android:backgroundTint="@android:color/transparent"
        android:fontFamily="@font/roboto_regular"
        android:justificationMode="inter_word"
        android:text="@string/text_insert_incame"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_10dp_margin"
        android:hint="@string/insert_income_label"
        app:boxCornerRadiusBottomEnd="@dimen/default_10dp_margin"
        app:boxCornerRadiusBottomStart="@dimen/default_10dp_margin"
        app:boxCornerRadiusTopEnd="@dimen/default_10dp_margin"
        app:boxCornerRadiusTopStart="@dimen/default_10dp_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextIncome"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:maxLines="1"
            android:focusable="true"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonAddIncome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_label"
        android:layout_margin="@dimen/default_10dp_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>